Update Schedule Feature